--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       </div>
     </div>
     <!-- Casual Shoes Section-3 -->
-    <section class="container">
+    <section class="container seller">
       <h1>CASUAL SHOES</h1>
       <div class="row">
         <div class="col-md-4 col-sm-6 _text__area">
@@ -155,7 +155,7 @@
       </div>
     </section>
     <!-- Formal Shoes Section-4 -->
-    <section class="container pb-5">
+    <section class="container seller">
       <h1>FORMAL SHOES</h1>
       <div class="row">
         <div class="col-md-4 col-sm-6 _text__area">
