button Color fix

--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
             Accusamus, mollitia laboriosam ad eveniet ullam reiciendis
             recusandae architecto maxime ea. Voluptate.
           </p>
-          <button class="bg-primary p-2 border border-info px-3 rounded">
+          <button
+            class="bg-primary _color fs-5 fw-bold p-2 border border-info px-3 rounded"
+          >
             <i class="fas fa-shopping-cart me-2"></i>BUY NOW
           </button>
         </div>
@@ -108,7 +110,7 @@
           >
             <p style="color: #fa804c" class="fs-3 fw-bold">$223</p>
             <button
-              class="bg-primary fs-6 fw-bold p-1 border border-info rounded"
+              class="bg-primary _color fs-6 fw-bold p-1 border border-info rounded"
             >
               <i class="fas fa-shopping-cart me-2"></i>BUY NOW
             </button>
@@ -116,7 +118,7 @@
         </div>
         <div class="col-md-4 col-sm-6 _text__area">
           <img class="w-75" src="images/image 5.png" alt="" />
-          <h3>Nike Shoe</h3>
+          <h3>Sneakers Skate Shoe</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae
             id delectus culpa eveniet voluptatibus distinctio quaerat unde
@@ -127,7 +129,7 @@
           >
             <p style="color: #fa804c" class="fs-3 fw-bold">$223</p>
             <button
-              class="bg-primary fs-6 fw-bold p-1 border border-info rounded"
+              class="bg-primary _color fs-6 fw-bold p-1 border border-info rounded"
             >
               <i class="fas fa-shopping-cart me-2"></i>BUY NOW
             </button>
@@ -135,7 +137,7 @@
         </div>
         <div class="col-md-4 col-sm-6 _text__area">
           <img class="w-75" src="images/pngegg 1.png" alt="" />
-          <h3>Nike Shoe</h3>
+          <h3>Sneakers Basketball shoe</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae
             id delectus culpa eveniet voluptatibus distinctio quaerat unde
@@ -146,7 +148,7 @@
           >
             <p style="color: #fa804c" class="fs-3 fw-bold">$223</p>
             <button
-              class="bg-primary fs-6 fw-bold p-1 border border-info rounded"
+              class="bg-primary _color fs-6 fw-bold p-1 border border-info rounded"
             >
               <i class="fas fa-shopping-cart me-2"></i>BUY NOW
             </button>
@@ -160,7 +162,7 @@
       <div class="row">
         <div class="col-md-4 col-sm-6 _text__area">
           <img class="w-75" src="images/Mask Group.png" alt="" />
-          <h3>Nike Shoe</h3>
+          <h3>Prestige High-Cut Leather</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae
             id delectus culpa eveniet voluptatibus distinctio quaerat unde
@@ -171,7 +173,7 @@
           >
             <p style="color: #fa804c" class="fs-3 fw-bold">$223</p>
             <button
-              class="bg-primary fs-6 fw-bold p-1 border border-info rounded"
+              class="bg-primary _color fs-6 fw-bold p-1 border border-info rounded"
             >
               <i class="fas fa-shopping-cart me-2"></i>BUY NOW
             </button>
@@ -179,7 +181,7 @@
         </div>
         <div class="col-md-4 col-sm-6 _text__area">
           <img class="w-75" src="images/Rectangle 38.png" alt="" />
-          <h3>Nike Shoe</h3>
+          <h3>Slip-On Formal Shoe</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae
             id delectus culpa eveniet voluptatibus distinctio quaerat unde
@@ -190,7 +192,7 @@
           >
             <p style="color: #fa804c" class="fs-3 fw-bold">$223</p>
             <button
-              class="bg-primary fs-6 fw-bold p-1 border border-info rounded"
+              class="bg-primary _color fs-6 fw-bold p-1 border border-info rounded"
             >
               <i class="fas fa-shopping-cart me-2"></i>BUY NOW
             </button>
@@ -198,7 +200,7 @@
         </div>
         <div class="col-md-4 col-sm-6 _text__area">
           <img class="w-75" src="images/Rectangle 39.png" alt="" />
-          <h3>Nike Shoe</h3>
+          <h3>Slip-On Formal Shoe</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae
             id delectus culpa eveniet voluptatibus distinctio quaerat unde
@@ -209,7 +211,7 @@
           >
             <p style="color: #fa804c" class="fs-3 fw-bold">$223</p>
             <button
-              class="bg-primary fs-6 fw-bold p-1 border border-info rounded"
+              class="bg-primary _color fs-6 fw-bold p-1 border border-info rounded"
             >
               <i class="fas fa-shopping-cart me-2"></i>BUY NOW
             </button>
