--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     <!-- exchange and seller contact Details Section-5 -->
     <section class="container seller">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-12 col-lg-6">
           <div class="wrapper d-flex align-items-center">
             <img src="icons/image 13.png" alt="" />
             <div class="_text_Part ms-4">
@@ -253,7 +253,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-12 col-lg-6">
           <img class="w-100" src="icons/XMLID 1.png" alt="" />
         </div>
       </div>
